--- a/FP_Cavity_Physics/FP_Cavity_Physics/FP_Cavity_Physics.vcxproj
+++ b/FP_Cavity_Physics/FP_Cavity_Physics/FP_Cavity_Physics.vcxproj
@@ -120,12 +120,14 @@
     <ClInclude Include="Material_Models.h" />
     <ClInclude Include="Templates.h" />
     <ClInclude Include="Useful.h" />
+    <ClInclude Include="Vector_Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FP_Model.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Material_Models.cpp" />
     <ClCompile Include="Useful.cpp" />
+    <ClCompile Include="Vector_Utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
