--- a/FP_Cavity_Physics/FP_Cavity_Physics/FP_Cavity_Physics.vcxproj.filters
+++ b/FP_Cavity_Physics/FP_Cavity_Physics/FP_Cavity_Physics.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Material_Models.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Vector_Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Useful.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Material_Models.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector_Utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
