--- a/FP_Cavity_Physics/FP_Cavity_Physics/FP_Cavity_Physics.vcxproj.filters
+++ b/FP_Cavity_Physics/FP_Cavity_Physics/FP_Cavity_Physics.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="Vector_Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Testing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Neville.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Useful.cpp">
@@ -48,6 +54,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Vector_Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Testing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Neville.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
