--- a/FP_Cavity_Physics/FP_Cavity_Physics/FP_Cavity_Physics.vcxproj
+++ b/FP_Cavity_Physics/FP_Cavity_Physics/FP_Cavity_Physics.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClInclude Include="Attach.h" />
     <ClInclude Include="FP_Model.h" />
+    <ClInclude Include="Fresnel_Eqn.h" />
     <ClInclude Include="Material_Models.h" />
     <ClInclude Include="Neville.h" />
     <ClInclude Include="Templates.h" />
@@ -126,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FP_Model.cpp" />
+    <ClCompile Include="Fresnel_Eqn.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Material_Models.cpp" />
     <ClCompile Include="Neville.cpp" />
