--- a/FP_Cavity_Physics/FP_Cavity_Physics/FP_Cavity_Physics.vcxproj.filters
+++ b/FP_Cavity_Physics/FP_Cavity_Physics/FP_Cavity_Physics.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Neville.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Fresnel_Eqn.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Useful.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Neville.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Fresnel_Eqn.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
